--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,16 +5,12 @@ on:
     branches: ["main"]
 
 env:
-  AWS_REGION: us-east-1 # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: kaban-server # set this to your Amazon ECR repository name
-  ECS_SERVICE: kaban-server-service # set this to your Amazon ECS service name
-  ECS_CLUSTER: kaban-server-cluster # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION:
-    .aws/task-definition.json # set this to the path to your Amazon ECS task definition
-    # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME:
-    kaban-server-container # set this to the name of the container in the
-    # containerDefinitions section of your task definition
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: kaban-server
+  ECS_SERVICE: kaban-server-service
+  ECS_CLUSTER: kaban-server-cluster
+  ECS_TASK_DEFINITION: .aws/task-definition.json
+  CONTAINER_NAME: kaban-server-container
 
 permissions:
   contents: read
